--- a/apps/platform/styles/global.css
+++ b/apps/platform/styles/global.css
@@ -3,6 +3,7 @@
 @import './tailwind.css';
 @import './slick.css';
 @import './tailwind-fix.css';
+@import './editorjs.overrides.css';
 
 @import 'react-quill/dist/quill.snow.css';
 @import 'react-grid-layout/css/styles.css';
@@ -31,36 +32,4 @@
   font-family: unset;
   font-weight: unset;
   font-size: unset;
-}
-
-.codex-editor__redactor {
-  padding: 0 !important;
-}
-
-.ce-block__content {
-  max-width: 100% !important;
-  margin: 0 !important;
-}
-
-
-.ce-block__content,
-.ce-toolbar__content {
-  max-width: unset !important;
-}
-
-div:where(.css-dev-only-do-not-override-htwhyh).ant-typography {
-  margin: 0 !important;
-}
-
-.cdx-block {
-  padding: 0 !important;
-}
-
-.codex-editor--narrow .codex-editor__redactor {
-  margin: 0 !important;
-  padding: 0 !important;
-}
-
-.codex-editor.codex-editor--narrow.codex-editor--empty {
-  min-width: 10px !important;
 }
