--- a/apps/platform/styles/global.css
+++ b/apps/platform/styles/global.css
@@ -3,6 +3,7 @@
 @import './tailwind.css';
 @import './slick.css';
 @import './tailwind-fix.css';
+@import './editorjs.overrides.css';
 
 @import 'react-quill/dist/quill.snow.css';
 @import 'react-grid-layout/css/styles.css';
