--- a/apps/platform/styles/global.css
+++ b/apps/platform/styles/global.css
@@ -33,3 +33,8 @@
   font-weight: unset;
   font-size: unset;
 }
+
+.hoverable {
+  /* box-shadow: 0px 0px 0px 1px black, inset 0px 0px 0px 1px black; */
+  border: 1px solid black !important;
+}
