feat: bind SpacingEditor to styles

--- a/libs/frontend/domain/element/src/css-editor/new-editor/border/borderStyle.module.css
+++ b/libs/frontend/domain/element/src/css-editor/new-editor/border/borderStyle.module.css
@@ -7,7 +7,7 @@
   width: 100%;
   height: 90px;
   grid-template-areas:
-    ". n ."
-    "w center e"
-    ". s .";
+    ". top ."
+    "left center right"
+    ". bottom .";
 }
