--- a/libs/frontend/domain/element/src/css-editor/new-editor/position/positionStyle.module.css
+++ b/libs/frontend/domain/element/src/css-editor/new-editor/position/positionStyle.module.css
@@ -5,7 +5,7 @@
   width: 85%;
   height: 80px;
   grid-template-areas:
-    ". n ."
-    "w center e"
-    ". s .";
+    ". top ."
+    "left center right"
+    ". bottom .";
 }
