wip: adding storybook
wip: adding storybook

--- a/apps/platform/styles/global.css
+++ b/apps/platform/styles/global.css
@@ -16,8 +16,7 @@
 
   https://www.elvisduru.com/blog/how-to-customize-ant-design-theme-in-nextjs
 */
-
-@import 'antd/dist/reset.css';
+@import '~antd/dist/reset.css';
 
 #__next {
   height: 100%;
