chore: remove unused package.json
chore: remove unused package.json

chore: remove unused package.json

--- a/apps/platform/styles/global.css
+++ b/apps/platform/styles/global.css
@@ -6,6 +6,7 @@
 
 @import 'react-quill/dist/quill.snow.css';
 @import 'react-grid-layout/css/styles.css';
+/* Used by https://github.com/react-grid-layout/react-grid-layout */
 @import 'react-resizable/css/styles.css';
 
 /**
