--- a/libs/frontend/presentation/codelab-ui/src/views/CuiTree/CuiTree.module.css
+++ b/libs/frontend/presentation/codelab-ui/src/views/CuiTree/CuiTree.module.css
@@ -79,7 +79,8 @@
     transform: translate(0, 4px);
 
     :global(.ant-tree-checkbox-inner) {
-      border-radius: 24px;
+      /* Keep square checkbox style */
+      /* border-radius: 24px; */
     }
   }
 }
