fix: text editor attaching content many time

--- a/libs/frontend/application/atom/src/components/custom/lexical-editor/styles.css
+++ b/libs/frontend/application/atom/src/components/custom/lexical-editor/styles.css
@@ -53,7 +53,7 @@ h1 {
 }
 
 .editor-container {
-  margin: 20px auto 20px auto;
+  margin: auto;
   border-radius: 2px;
   max-width: 600px;
   color: #000;
