--- a/libs/frontend/application/atom/src/components/custom/lexical-editor/styles.css
+++ b/libs/frontend/application/atom/src/components/custom/lexical-editor/styles.css
@@ -62,22 +62,12 @@ h1 {
   text-align: left;
 }
 
-.editor-container.editable {
-  min-height: 30px;
+.editor-container.editable .editor-input {
+  min-height: 20px;
   min-width: 30px;
 }
 
-.editor-container.editable .editor-inner {
-  height: 100%;
-  width: 100%;
-}
-
-.editor-inner {
-  position: relative;
-}
-
 .editor-input {
-  width: 100%;
   /* min-height: 20px; */
   /* resize: none;
   font-size: 15px;
