--- a/libs/frontend/application/atom/src/components/custom/lexical-editor/styles.css
+++ b/libs/frontend/application/atom/src/components/custom/lexical-editor/styles.css
@@ -53,24 +53,21 @@ h1 {
 }
 
 .editor-container {
-  margin: 20px auto 20px auto;
+  margin: auto;
   border-radius: 2px;
-  max-width: 600px;
   color: #000;
   position: relative;
   line-height: 20px;
   font-weight: 400;
   text-align: left;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
 }
 
-.editor-inner {
-  position: relative;
+.editor-container.editable .editor-input {
+  min-height: 20px;
+  min-width: 30px;
 }
 
 .editor-input {
-  width: 100%;
   /* min-height: 20px; */
   /* resize: none;
   font-size: 15px;
