--- a/libs/frontend/presentation/components/css-editor/src/border/borderStyle.module.css
+++ b/libs/frontend/presentation/components/css-editor/src/border/borderStyle.module.css
@@ -7,7 +7,7 @@
   width: 100%;
   height: 90px;
   grid-template-areas:
-    ". top ."
-    "left center right"
-    ". bottom .";
+    '. top .'
+    'left center right'
+    '. bottom .';
 }
