--- a/libs/frontend/presentation/components/css-editor/src/position/positionStyle.module.css
+++ b/libs/frontend/presentation/components/css-editor/src/position/positionStyle.module.css
@@ -5,7 +5,7 @@
   width: 85%;
   height: 80px;
   grid-template-areas:
-    ". top ."
-    "left center right"
-    ". bottom .";
+    '. top .'
+    'left center right'
+    '. bottom .';
 }
